static/sass/controller.scss
/*
  Copyright (C) 2012 Marcelo Jorge Vieira <metal@alucinados.com>
  Copyright (C) 2012 Guilherme Guerra <guerrinha@comum.org>

  This program is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation; either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License along
  with this program; if not, write to the Free Software Foundation, Inc.,
  51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
*/

@import "compass";

body {
    color: #FFF;
    background: #000;
}

.happiness {
    text-align: center;
    float: right;
    width: 60px;
    height: 218px;
    position: relative;
    overflow: hidden;
}

.meter-border {
    width: 60px;
    height: 218px;
    position:absolute;
    bottom:0;
    left:0;
    background: url(../images/frontal/medidor_white.png) no-repeat;
}

.barra {
    width: 26px;
    height: 166px;
    padding-left: 5px;
    position: absolute;
    margin-top: 25px;
}

.meter {
    width: 26px;
    max-height: 166px;
    bottom: 0;
    position: absolute;
    background: white;
}


.buttons button {
    margin-top: 20px;
}

.thumbnail img {
    height: 100px;
    width: 160px;
}

.thumbnail .video {
    @include background(image-url("controller/default.png") no-repeat center, radial-gradient( 100px 100px, #CCC 10px, #999 100px));
    text-align: center;
    height: 100px;
    display: block;
}

.thumbnail  .image, .thumbnail .video {
    position: relative;
}

.thumbnail  p {
    background: none repeat scroll 0 0 rgba(black, 0.75);
    bottom: 0;
    color: #FFFFFF;
    font-size: 9pt;
    font-weight: 600;
    left: 0;
    line-height: 24px;
    overflow: hidden;
    padding: 3px;
    position: absolute;
    right: 0;
    text-align: left;
    text-overflow: ellipsis;
    margin: 0;
}

.controller-modal input {
    width: 50px;
}

.controller-modal {
    color: black;
}

.controller-modal #error-msg {
    color: red;
}

